JD-526: Allocations (#319)
* JD-378: New payouts processing

* Saving payout_tool_id

* Upd proto

* Added test, bump service-parent-pom

* Bump service-parent-pom

* Fix test, removed duplicated test

* Fix test

* Fix after review

* Fix test

* bump pg-embedded-plugin

* actualize topice name for payouts (#303)

* Added statPayout changes

* Revert "JD-265: add allocation" (#304)

* Revert "JD-265: add allocation (#298)"

This reverts commit 780939354f2fdd1d14e264d0fb9d577e11329722.

* bump deps

* Fixes

* Added allocation script

* Fix test

* Fix test

* Fix readme

* Fix after review

* JD-449: invoice-template  saved handler impl (#305)

* add implementation
* add usage 'testcontainers-annotations:1.0.0' artifact (#306)
* create singletons containers
* add create topic by adminClient logic
* add validation connection and topics for kafka container
* refactor test configs and test lifecycle (#308)
* remove invoiceId from migration (#307)
* add InvoiceTemplateServiceTest

* bacl allocation migration, fix order (#309)

* return old KafkaConfig for invoicing topic (#311)

* return MachineEventDeserializer (#312)

* delete MachineEventDeserializer (#313)

* JD-536: remove exception logic in handling (#314)

allow skip and rewrite at duplicate events

* merging actual master (#315)

* Upd damsel

* JD-378: New payouts processing (#302)

* JD-378: New payouts processing

* Saving payout_tool_id

* Upd proto

* Added test, bump service-parent-pom

* Bump service-parent-pom

* Fix test, removed duplicated test

* Fix test

* Fix after review

* Fix test

* bump pg-embedded-plugin

* actualize topice name for payouts (#303)

* Added statPayout changes

* Added allocation script

* Fix test

* Fix test

* Fix readme

* Fix after review

* merging actual master (#315)

* Upd damsel

* Upd service-parent-pom

Co-authored-by: karleowne <karleowne@gmail.com>
Co