@@ -10,7 +10,6 @@ import com.rbkmoney.machinegun.eventsink.MachineEvent;
 import com.rbkmoney.magista.TestData;
 import com.rbkmoney.magista.converter.BinaryConverterImpl;
 import com.rbkmoney.magista.converter.SourceEventParser;
-import com.rbkmoney.magista.dao.impl.AllocationDaoImpl;
 import com.rbkmoney.magista.dao.impl.mapper.AllocationRowMapper;
 import com.rbkmoney.magista.event.handler.impl.*;
 import com.rbkmoney.magista.event.mapper.impl.*;
@@ -33,6 +32,7 @@ import static com.rbkmoney.testcontainers.annotations.util.ThriftUtil.toByteArra
 import static com.rbkmoney.testcontainers.annotations.util.ValuesGenerator.generateString;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.BDDMockito.given;
+import static org.mockito.Mockito.times;
 import static org.mockito.Mockito.verify;
 
 @SpringBootTest
@@ -146,10 +146,14 @@ public class InvoiceListenerTest {
         InvoicePaymentAdjustment invoicePaymentAdjustment =
                 randomThriftOnlyRequiredFields(InvoicePaymentAdjustment.class)
                         .setCreatedAt(Instant.now().toString());
+
+        AllocationTransaction allocationTransaction = randomThriftOnlyRequiredFields(AllocationTransaction.class);
+        Allocation allocation = new Allocation().setTransactions(List.of(allocationTransaction));
+
         EventPayload eventPayload = EventPayload.invoice_changes(
                 Arrays.asList(
                         InvoiceChange.invoice_created(
-                                new InvoiceCreated(invoice)),
+                                new InvoiceCreated(invoice.setAllocation(allocation))),
                         InvoiceChange.invoice_status_changed(
                                 new InvoiceStatusChanged(InvoiceStatus.paid(new InvoicePaid()))),
                         InvoiceChange.invoice_payment_change(
@@ -160,7 +164,8 @@ public class InvoiceListenerTest {
                                 new InvoicePaymentChange(payment.getId(),
                                         InvoicePaymentChangePayload.invoice_payment_status_changed(
                                                 new InvoicePaymentStatusChanged(
-                                                        InvoicePaymentStatus.captured(new InvoicePaymentCaptured()))))),
+                                                        InvoicePaymentStatus.captured(new InvoicePaymentCaptured()
+                                                                .setAllocation(allocation)))))),
                         InvoiceChange.invoice_payment_change(
                                 new InvoicePaymentChange(payment.getId(),
                                         InvoicePaymentChangePayload.invoice_payment_refund_change(
@@ -211,13 +216,14 @@ public class InvoiceListenerTest {
                                                         TestData.buildInvoiceChargebackChangePayload()))))));
         message.setData(toByteArray(eventPayload));
 
-        invoicingListener.handleMessages(Arrays.asList(message));
+        invoicingListener.handleMessages(List.of(message));
 
         verify(invoiceService).saveInvoices(any());
         verify(paymentService).savePayments(any());
         verify(paymentRefundService).saveRefunds(any());
         verify(paymentAdjustmentService).saveAdjustments(any());
         verify(paymentChargebackService).saveChargeback(any());
+        verify(allocationService, times(2)).saveAllocations(any());
     }
 
     private InvoicePaymentRefundChange getInvoicePaymentRefundChange(InvoicePaymentRefund invoicePaymentRefund) {
